--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "awesome-nestjs-boilerplate",
-  "version": "10.0.0",
-  "description": "Awesome NestJS Boilerplate, Typescript, Postgres, TypeORM",
-  "author": "Narek Hakobyan <narek.hakobyan.07@gmail.com>",
+  "name": "nestjs",
+  "version": "1.0.0",
+  "description": "NestJS, Typescript, Postgres, TypeORM",
+  "author": "huyLD <huylee.dev.vn@gmail.com>",
   "private": true,
   "license": "MIT",
   "scripts": {
-    "build:prod": "tsc -p tsconfig.build.json",
-    "start:dev": "ts-node src/main.ts",
-    "start:prod": "node dist/main.js",
-    "typeorm": "typeorm-ts-node-esm",
-    "migration:generate": "yarn run typeorm migration:generate -d ormconfig",
-    "migration:create": "yarn run typeorm migration:create -d ormconfig",
+    "build": "nest build",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:swc": "nest start -b swc -w",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migration:generate": "yarn run typeorm -d ormconfig.ts migration:generate",
+    "migration:create": "yarn run typeorm -- migration:create",
+    "migration:run": "yarn run typeorm -d ormconfig.ts migration:run",
+    "migration:revert": "yarn run typeorm -d ormconfig.ts migration:revert",
     "new": "hygen new",
-    "migration:revert": "yarn run typeorm migration:revert",
     "schema:drop": "yarn run typeorm schema:drop",
     "watch:dev": "ts-node-dev src/main.ts",
     "debug:dev": "cross-env TS_NODE_CACHE=false ts-node-dev --inspect --ignore '/^src/.*\\.spec\\.ts$/' src/main.ts",
@@ -54,6 +56,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
+    "mongoose": "^8.3.2",
     "morgan": "^1.10.0",
     "nestjs-cls": "^3.6.0",
     "nestjs-i18n": "^10.4.0",
