--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,9 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowUnreachableCode": false,
-    //    "exactOptionalPropertyTypes": true,
     "noImplicitThis": true,
-    //    "noPropertyAccessFromIndexSignature": true,
-    "noUnusedParameters": true,
-    "noUnusedLocals": true,
+    "noUnusedParameters": false,
+    "noUnusedLocals": false,
     "strictPropertyInitialization": true,
     "target": "ES2022",
     "noFallthroughCasesInSwitch": true,
@@ -29,8 +27,6 @@
     "incremental": true,
     "strictNullChecks": true,
     "skipLibCheck": true,
-    // "noUnusedParameters": true,
-    // "noUnusedLocals": true,
     "strict": true
   },
   "include": ["src/**/*"],
