--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "@nestjs/terminus": "^10.2.0",
     "@nestjs/throttler": "^5.1.1",
     "@nestjs/typeorm": "^10.0.1",
+    "@types/crypto-js": "^4.2.2",
     "bcrypt": "^5.1.1",
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "~0.5.1",
     "class-validator": "~0.14.0",
     "compression": "^1.7.4",
+    "crypto-js": "^4.2.0",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
