--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "class-transformer": "~0.5.1",
     "class-validator": "~0.14.0",
     "compression": "^1.7.4",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
