--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
+    "slugify": "^1.6.6",
     "source-map-support": "^0.5.21",
     "swagger-ui-express": "^5.0.0",
     "tslib": "^2.6.2",
