--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@nestjs/typeorm": "^10.0.1",
     "@types/crypto-js": "^4.2.2",
     "bcrypt": "^5.1.1",
+    "cache-manager": "^5.7.6",
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "~0.5.1",
     "class-validator": "~0.14.0",
@@ -76,6 +77,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/cli": "^10.2.1",
     "@nestjs/schematics": "^10.1.3",
     "@nestjs/testing": "^10.3.0",
