--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@nestjs/throttler": "^5.1.1",
     "@nestjs/typeorm": "^10.0.1",
     "@types/crypto-js": "^4.2.2",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.4",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.7.6",
     "cache-manager-redis-store": "^3.0.1",
@@ -94,8 +96,8 @@
     "@types/passport-jwt": "^3.0.13",
     "@types/supertest": "^2.0.16",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
     "@vuepress/client": "^2.0.0-rc.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
@@ -112,6 +114,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-sonarjs": "^0.23.0",
     "eslint-plugin-unicorn": "^50.0.1",
+    "eslint-plugin-unused-imports": "^4.1.3",
     "gh-pages": "^6.1.1",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
