--- a/be-ecommerce/package.json
+++ b/be-ecommerce/package.json
@@ -27,7 +27,6 @@
     "docs:dev": "vuepress dev -p 7070",
     "docs:build": "DEPLOY_ENV=gh-pages vuepress build",
     "docs:deploy": "yarn docs:build && gh-pages -d .vuepress/dist",
-    "prepare": "husky install",
     "release": "release-it"
   },
   "dependencies": {
@@ -83,6 +82,7 @@
     "@nestjs/cli": "^10.2.1",
     "@nestjs/schematics": "^10.1.3",
     "@nestjs/testing": "^10.3.0",
+    "@types/amqplib": "^0.10.5",
     "@types/bcrypt": "^5.0.2",
     "@types/cache-manager-redis-store": "^2.0.4",
     "@types/compression": "^1.7.5",
@@ -116,7 +116,6 @@
     "eslint-plugin-unicorn": "^50.0.1",
     "eslint-plugin-unused-imports": "^4.1.3",
     "gh-pages": "^6.1.1",
-    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "~15.2.0",
     "prettier": "^3.1.1",
